--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,13 @@ body{
     padding: 5px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
-	overflow:auto;
+	overflow:auto;	
 }
+
+#favorites_list > ul > li{
+	cursor:pointer;
+}
+
 #favorites_list li h3{
     cursor: pointer;
     color: #ffffff;
@@ -237,4 +242,34 @@ body{
 }
 #main_menu li a:hover, #latest_episodes_list .episode_title:hover, #favorites_list li h3:hover{
 	color:#C09ABC;
+}
+
+#popup_background{
+	display:none;
+	background: #000;
+	position: fixed; 
+	left: 0; 
+	top: 0;
+	width: 100%; 
+	height: 100%;
+	opacity: .80;	
+	z-index: 9001;
+}
+#popup_window{
+	display:none;
+	position:absolute;
+	background-color:#ffffff;	
+	width:300px;
+	height:300px;
+	z-index: 9002;
+	box-shadow: 0px 0px 20px #000000;
+	-moz-box-shadow: 0px 0px 20px #000000;
+	-webkit-box-shadow: 0px 0px 20px #000000;
+}
+#episode_popup{
+	background-color:#0D5995;
+	border: 5px solid #ffffff;
+	border-radius:5px;
+	-moz-border-radius:5px;	
+	-webkit-border-radius:5px;
 }
