--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,19 @@ body{
 	cursor:pointer;
 }
 
+.downloadedButton{
+    background-color: #82D23D;
+    -moz-border-radius:20px;
+    -webkit-border-radius:20px;
+    font-size: 9pt;
+    color: #000000;
+    width: 25px;
+    float: right;
+    text-align: center;
+    text-decoration: none;
+	cursor:pointer;
+}
+
 .unSeenButton{
     background-color: #c4c4c4;
     -moz-border-radius:20px;
