--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,19 @@ body{
 	margin-right:5px;
 }
 
+.streamButton{
+    background-color: #c4c4c4;
+    -moz-border-radius:20px;
+    -webkit-border-radius:20px;
+    font-size: 9pt;
+    color: #000000;
+    width: 25px;
+    float: right;
+    text-align: center;
+    text-decoration: none;
+	cursor:pointer;
+}
+
 #latest_episodes_list{
 	background-color: #ffffff;
    	border: #000000 solid 1px;   	
@@ -400,7 +413,7 @@ body{
 	margin:0px 5px 0px 5px;
 }
 
-#episode_popup .unSeenButton , #episode_popup .downloadButton{
+#episode_popup .unSeenButton , #episode_popup .downloadButton, #episode_popup .streamButton{
 	float:left;
 	background-color:#fff;
 	margin:0px 5px 0px 0px;
