--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,10 @@ html {
 }
 body{
     background: #383838;
-	background:-moz-linear-gradient(100% 100% 90deg,#383838, #212121) ;
-	background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#212121), to(#383838));
+	background: -moz-linear-gradient(100% 100% 90deg, #383838, #212121);
+	background: -o-linear-gradient(100% 100% 90deg, #383838, #212121);
+	background: linear-gradient(100% 100% 90deg, #383838, #212121);	
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#212121), to(#383838));
     font-family: arial, verdana;	
 }
 #page_wrap{
@@ -30,14 +32,18 @@ body{
     width: 300px;
     background: #f0f0f0;
 	background: -moz-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
+	background: -o-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
+	background: linear-gradient(100% 100% 90deg,#063F6B, #0D5995);	
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0D5995), to(#063F6B));
     border: 1px solid white;
     margin: 250px auto 0;
     padding: 1em;
 	border-radius: 3px;
+	-o-border-radius: 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
 	box-shadow: 0px 0px 20px #000000;
+	-o-box-shadow: 0px 0px 20px #000000;
 	-moz-box-shadow: 0px 0px 20px #000000;
 	-webkit-box-shadow: 0px 0px 20px #000000;
 }
@@ -53,6 +59,8 @@ body{
     margin: 0 0 1em 0;
     width: 280px;
     border: 5px;
+	border-radius: 5px;
+	-o-border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     padding: 1em;
@@ -64,12 +72,17 @@ body{
     padding: 6px;
     text-decoration: none;
     font-size: 12px;
+	border-radius: 4px;
+	-o-border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
+	background: linear-gradient(25% 65% 90deg,#77a90d, #83c210, #95d620 53%,#94d61b 100%);
+	background: -o-linear-gradient(25% 65% 90deg,#77a90d, #83c210, #95d620 53%,#94d61b 100%);
     background: -moz-linear-gradient(25% 65% 90deg,#77a90d, #83c210, #95d620 53%,#94d61b 100%); /*#348075;*/
 	background: -webkit-gradient(linear, 0% 0%, 0% 70%, from(#83C210), to(#77A90D), color-stop(.3,#94D61B),color-stop(.5,#95D620));
     color: white;
     box-shadow: 0 1px 0 white;
+	-o-box-shadow: 0 1px 0 white;
     -moz-box-shadow: 0 1px 0 white;
     -webkit-box-shadow: 0 1px 0 white;
 	text-shadow:1px 1px 1px #000;
@@ -81,6 +94,8 @@ body{
     border: #000000 solid 1px;
     /*width: 650px;*/
     padding: 2px 5px;
+	border-radius: 4px;
+	-o-border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
 }
@@ -98,10 +113,14 @@ body{
 }
 #favorites_list > ul > li{
     background-color: #0D5995;
+	background: linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
+	background: -o-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -moz-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0D5995), to(#063F6B));
     margin: 5px 0;
     padding: 5px;
+	border-radius: 4px;
+	-o-border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
 	overflow:auto;		
@@ -125,6 +144,8 @@ body{
     float: right;
     width: 30px;
     text-align: center;
+	border-radius: 20px;
+	-o-border-radius: 20px;
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;	
 }
@@ -135,21 +156,29 @@ body{
     list-style: none;
     padding: 0;
 	margin-top:60px;
+	border-radius: 4px;
+	-o-border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
 }
 
 .seriesEpisodeListSeason{
     background-color: #0D5995;
+	background: linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
+	background: -o-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -moz-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0D5995), to(#063F6B));
 	color:#f3f3f3;
+	border-radius: 0px;
+	-o-border-radius: 0px;
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px;
 }
 
 .downloadButton{
     background-color: #c4c4c4;
+	border-radius:20px;
+	-o-border-radius:20px;
     -moz-border-radius:20px;
     -webkit-border-radius:20px;
     font-size: 9pt;
@@ -163,6 +192,8 @@ body{
 
 .downloadedButton{
     background-color: #82D23D;
+	border-radius:20px;
+	-o-border-radius:20px;
     -moz-border-radius:20px;
     -webkit-border-radius:20px;
     font-size: 9pt;
@@ -176,6 +207,8 @@ body{
 
 .unSeenButton{
     background-color: #c4c4c4;
+	border-radius:20px;
+	-o-border-radius:20px;
     -moz-border-radius:20px;
     -webkit-border-radius:20px;
     font-size: 9pt;
@@ -189,6 +222,8 @@ body{
 
 .seenButton{
     background-color: #82D23D;
+	border-radius:20px;
+	-o-border-radius:20px;
     -moz-border-radius:20px;
     -webkit-border-radius:20px;
     font-size: 9pt;
@@ -202,6 +237,8 @@ body{
 
 .notFavoriteButton{
     background-color: #fff;
+	border-radius:20px;
+	-o-border-radius:20px;
     -moz-border-radius:20px;
     -webkit-border-radius:20px;
     font-size: 9pt;
@@ -216,6 +253,8 @@ body{
 
 .favoriteButton{
     background-color: #82D23D;
+	border-radius:20px;
+	-o-border-radius:20px;
     -moz-border-radius:20px;
     -webkit-border-radius:20px;
     font-size: 9pt;
@@ -230,6 +269,8 @@ body{
 
 .streamButton{
     background-color: #c4c4c4;
+	border-radius:20px;
+	-o-border-radius:20px;
     -moz-border-radius:20px;
     -webkit-border-radius:20px;
     font-size: 9pt;
@@ -245,6 +286,8 @@ body{
 	background-color: #ffffff;
    	border: #000000 solid 1px;   	
    	padding: 2px;
+	border-radius:4px;
+	-o-border-radius:4px;
    	-moz-border-radius: 4px;
    	-webkit-border-radius: 4px;
 }
@@ -257,11 +300,15 @@ body{
 
 #latest_episodes_list li{
     background-color: #0D5995;
+	background: linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
+	background: -o-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -moz-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0D5995), to(#063F6B));
     margin: 1;
     padding: 5px;
-    -moz-border-radius: 2px;
+    border-radius: 2px;
+	-o-border-radius: 2px;
+	-moz-border-radius: 2px;
     -webkit-border-radius: 2px;
 }
 
@@ -285,6 +332,7 @@ body{
 	background-color:#ffffff;
 	border: #000000 solid 1px;
 	border-radius:4px;
+	-o-border-radius:4px;
 	-moz-border-radius:4px;	
 	-webkit-border-radius:4px;
 	margin:2px;
@@ -301,12 +349,15 @@ body{
 #main_menu li{
 	display:inline;
 	background-color:#0D5995;
+	background: linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
+	background: -o-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -moz-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0D5995), to(#063F6B));
 	text-align:center;
 	width:250px;
 	padding: 4px 10px;	
 	border-radius:4px;
+	-o-border-radius:4px;
 	-moz-border-radius:4px;
 	-webkit-border-radius:4px;
 }
@@ -328,9 +379,11 @@ body{
 
 #top_search input[type=text] {
 	border-radius:5px;
+	-o-border-radius:5px;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	box-shadow: 0px 0px 1px #000000;
+	-o-box-shadow: 0px 0px 1px #000000;
 	-moz-box-shadow: 0px 0px 1px #000000;
 	-webkit-box-shadow: 0px 0px 1px #000000;
 	margin-right:5px;
@@ -342,12 +395,17 @@ body{
     padding: 2px;
     text-decoration: none;
     font-size: 12px;
+	border-radius: 4px;
+	-o-border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
+	background: linear-gradient(25% 65% 90deg,#77a90d, #83c210, #95d620 53%,#94d61b 100%);
+	background: -o-linear-gradient(25% 65% 90deg,#77a90d, #83c210, #95d620 53%,#94d61b 100%);
     background: -moz-linear-gradient(25% 65% 90deg,#77a90d, #83c210, #95d620 53%,#94d61b 100%); /*#348075;*/
 	background: -webkit-gradient(linear, 0% 0%, 0% 70%, from(#83C210), to(#77A90D), color-stop(.3,#94D61B),color-stop(.5,#95D620));
     color: white;
     box-shadow: 0 1px 0 white;
+	-o-box-shadow: 0 1px 0 white;
     -moz-box-shadow: 0 1px 0 white;
     -webkit-box-shadow: 0 1px 0 white;
 	text-shadow:1px 1px 1px #000;
@@ -371,9 +429,11 @@ body{
 	background-color:#ffffff;	
 	z-index: 9002;
 	box-shadow: 0px 0px 20px #000000;
+	-o-box-shadow: 0px 0px 20px #000000;
 	-moz-box-shadow: 0px 0px 20px #000000;
 	-webkit-box-shadow: 0px 0px 20px #000000;
 	border-radius:5px;
+	-o-border-radius:5px;
 	-moz-border-radius:5px;	
 	-webkit-border-radius:5px;
 	min-width:400px;
@@ -381,10 +441,13 @@ body{
 }
 #episode_popup{
 	background-color:#0D5995;
+	background: linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
+	background: -o-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -moz-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0D5995), to(#063F6B)); 
 	border: 5px solid #fff;
 	border-radius:5px;
+	-o-border-radius:5px;
 	-moz-border-radius:5px;	
 	-webkit-border-radius:5px;
 	width:500px;
@@ -398,6 +461,7 @@ body{
 	margin:2px 10px 2px 2px;
 	background-color:#fff;
 	border-radius:3px;
+	-o-border-radius:3px;
 	-moz-border-radius:3px;	
 	-webkit-border-radius:3px;
 	max-width:100px;
@@ -436,10 +500,12 @@ body{
 	background-color:#fff;
 	text-align:center;
 	border-radius:50px;
+	-o-border-radius:50px;
 	-moz-border-radius:50px;	
 	-webkit-border-radius:50px;
 	cursor:pointer;
 	box-shadow: 0px 0px 10px #000000;
+	-o-box-shadow: 0px 0px 10px #000000;
 	-moz-box-shadow: 0px 0px 10px #000000;
 	-webkit-box-shadow: 0px 0px 10px #000000;
 }
@@ -448,9 +514,12 @@ body{
 	text-align:center;
 	color:#fff;
 	background-color:#0D5995;
+	background: linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
+	background: -o-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -moz-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0D5995), to(#063F6B));
 	border-radius: 4px;
+	-o-border-radius: 4px;
 	-moz-border-radius: 4px;
     -webkit-border-radius: 4px;
 }
@@ -470,6 +539,8 @@ body{
     border: #000000 solid 1px;
     /*width: 650px;*/
     padding: 2px 5px;
+	border-radius: 4px;
+	-o-border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
 }
@@ -490,10 +561,14 @@ body{
 }
 #series_list > ul > li{
     background-color: #0D5995;
+	background: linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
+	background: -o-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -moz-linear-gradient(100% 100% 90deg,#063F6B, #0D5995);
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0D5995), to(#063F6B));
     margin: 5px 0;
     padding: 5px;
+	border-radius: 4px;
+	-o-border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
 	overflow:auto;		
